cmake_minimum_required(VERSION 3.21)
project(formal_languages)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-fsanitize=address -coverage ")

add_subdirectory(google-test)
include_directories(${CMAKE_SOURCE_DIR}/google-test/include ${CMAKE_SOURCE_DIR}/google-test/)

file(GLOB_RECURSE REGEX_ENGINE_FILES "${CMAKE_SOURCE_DIR}/src/engine/*.cpp" "${CMAKE_SOURCE_DIR}/src/engine/*.hpp")
file(GLOB_RECURSE TESTS_FILES "${CMAKE_SOURCE_DIR}/src/tests/*.cpp" "${CMAKE_SOURCE_DIR}/src/tests/*.hpp")
file(GLOB_RECURSE MAIN_FILES "${CMAKE_SOURCE_DIR}/src/main/*.cpp" "${CMAKE_SOURCE_DIR}/src/main/*.hpp")
file(GLOB_RECURSE TASK6_FILES "${CMAKE_SOURCE_DIR}/src/task6/*.cpp" "${CMAKE_SOURCE_DIR}/src/task6/*.hpp")
file(GLOB_RECURSE TASK6_TESTS_FILES "${CMAKE_SOURCE_DIR}/src/task6_tests/*.cpp" "${CMAKE_SOURCE_DIR}/src/task6_tests/*.hpp")
file(GLOB_RECURSE CYK_FILES "${CMAKE_SOURCE_DIR}/src/cyk/tool/*.cpp" "${CMAKE_SOURCE_DIR}/src/cyk/tool/*.hpp")
file(GLOB_RECURSE CYK_ENGINE_FILES "${CMAKE_SOURCE_DIR}/src/cyk/engine/*.cpp" "${CMAKE_SOURCE_DIR}/src/cyk/engine/*.hpp")
file(GLOB_RECURSE CYK_TESTS_FILES "${CMAKE_SOURCE_DIR}/src/cyk_tests/*.cpp" "${CMAKE_SOURCE_DIR}/src/cyk_tests/*.hpp")
file(GLOB_RECURSE EARLEY_FILES "${CMAKE_SOURCE_DIR}/src/earley/tool/*.cpp" "${CMAKE_SOURCE_DIR}/src/earley/tool/*.hpp")
file(GLOB_RECURSE EARLEY_ENGINE_FILES "${CMAKE_SOURCE_DIR}/src/earley/engine/*.cpp" "${CMAKE_SOURCE_DIR}/src/earley/engine/*.hpp")
file(GLOB_RECURSE EARLEY_TESTS_FILES "${CMAKE_SOURCE_DIR}/src/earley_tests/*.cpp" "${CMAKE_SOURCE_DIR}/src/earley_tests/*.hpp")

add_executable(formal_languages ${MAIN_FILES} ${REGEX_ENGINE_FILES})
add_executable(task6 ${TASK6_FILES} ${REGEX_ENGINE_FILES})
add_executable(formal_languages_tests ${TESTS_FILES} ${REGEX_ENGINE_FILES} )
add_executable(task6_tests ${TASK6_TESTS_FILES} ${REGEX_ENGINE_FILES} )
add_executable(cyk ${CYK_FILES} ${CYK_ENGINE_FILES})
add_executable(cyk_tests ${CYK_TESTS_FILES} ${CYK_ENGINE_FILES} )
add_executable(earley ${EARLEY_FILES} ${EARLEY_ENGINE_FILES})
add_executable(earley_tests ${EARLEY_TESTS_FILES} ${EARLEY_ENGINE_FILES} ${CYK_ENGINE_FILES})

target_link_libraries(formal_languages_tests gtest gtest_main)
target_link_libraries(task6_tests gtest gtest_main)
target_link_libraries(cyk_tests gtest gtest_main)
target_link_libraries(earley_tests gtest gtest_main)
